--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
    computerChoiceMsg = (`Computer choice is ${computerChoice}`);
 
     if(computerChoice === 'Ball')
-     {resultMsg = ('User Won');}
+     {resultMsg = 'User Won';}
     else if(computerChoice === 'Stump'){
-      resultMsg = ('Computer won');
+      resultMsg = 'Computer won';
     }
     else if(computerChoice === 'Bat'){
-      resultMsg = ('Tied');
+      resultMsg = 'Tied';
     }
 
     alert(`You have choosen Bat, computer choice is ${computerChoice}
@@ -81,7 +81,7 @@
       resultMsg = ('Computer Won');
     }
 
-    alert(`You have choosen Bat, computer choice is ${computerChoice}
+    alert(`You have choosen Ball, computer choice is ${computerChoice}
       Result ${resultMsg}`
     );
     "
@@ -119,7 +119,7 @@
        resultMsg = ('User won');
      }
  
-     alert(`You have choosen Bat, computer choice is ${computerChoice}
+     alert(`You have choosen Stump, computer choice is ${computerChoice}
        Result ${resultMsg}`
      );
      "
