--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <h1>Cricket Game</h1>
-    <button
+    <h1 class="heading">Cricket Game</h1>
+    <button class="bat"
       onclick="
    
    //this will get random number between 0 n 3
@@ -49,7 +49,7 @@
       Bat
     </button>
 
-    <button
+    <button class="ball"
       onclick="
    
     //this will get random number between 0 n 3
@@ -88,7 +88,7 @@
     >
       Ball
     </button>
-    <button
+    <button class="stump"
       onclick="
    
     //this will get random number between 0 n 3
@@ -127,6 +127,6 @@
       Stump
     </button>
 
-    <h2>Make Your Choice</h2>
+    <h2 class="footer">Make Your Choice</h2>
   </body>
 </html>
