--- a/index.html
+++ b/index.html
@@ -9,29 +9,13 @@
 
   <body>
     <h1 class="heading">Cricket Game</h1>
-    <button class="bat"
-      onclick="
+    <button
+      class="bat"
+      onclick="generateComputerChoice();
    
    //this will get random number between 0 n 3
    const UserChoiceMsg = ('You have chosen Bat');
-   let randomNumber = Math.random()*3;
-   let computerChoice;
-   let computerChoiceMsg;
-   let resultMsg;
-   
-   if (randomNumber > 0 && randomNumber <= 1){
-    computerChoice = 'Bat';
-   }
-   else if(randomNumber > 1 && randomNumber <= 2){
-    computerChoice = 'Ball';
-   }
-   else{
-    computerChoice = 'Stump';
-   }
-
-
-   computerChoiceMsg = (`Computer choice is ${computerChoice}`);
-
+  let resultMsg;
     if(computerChoice === 'Ball')
      {resultMsg = 'User Won';}
     else if(computerChoice === 'Stump'){
@@ -49,27 +33,9 @@
       Bat
     </button>
 
-    <button class="ball"
-      onclick="
-   
-    //this will get random number between 0 n 3
-    //  UserChoiceMsg = ('You have chosen Ball');
-     randomNumber = Math.random()*3;
-    if (randomNumber > 0 && randomNumber <= 1){
-     computerChoice = 'Bat';
-     // console.log('computer choice is bat');
-    }
-    else if(randomNumber > 1 && randomNumber <= 2){
-     computerChoice = 'Ball';
-     // console.log('Computer choice is ball');
-    }
-    else{
-     computerChoice = 'Stump';
-     // console.log('computer Choice is Stump');
-    }
- 
- 
-    computerChoiceMsg = (`Computer choice is ${computerChoice}`);
+    <button
+      class="ball"
+      onclick="generateComputerChoice();
  
     if(computerChoice === 'Ball')
     {resultMsg = ('Tied')}
@@ -88,30 +54,16 @@
     >
       Ball
     </button>
-    <button class="stump"
+
+    <button
+      class="stump"
       onclick="
-   
-    //this will get random number between 0 n 3
-    UserChoiceMsg = ('You have chosen Bat');
-    randomNumber = Math.random()*3;
-    if (randomNumber > 0 && randomNumber <= 1){
-     computerChoice = 'Bat';
-     // console.log('computer choice is bat');
-    }
-    else if(randomNumber > 1 && randomNumber <= 2){
-     computerChoice = ('Ball');
-     // console.log('Computer choice is ball');
-    }
-    else {
-     computerChoice = 'Stump';
-     // console.log('computer Choice is Stump');
-    }
-    computerChoiceMsg = (`Computer choice is ${computerChoice}`);
+   generateComputerChoice();
  
     resultMsg = null;
  
      if(computerChoice === 'Ball') resultMsg = ('Computer Won');
-     //  else if(computerChoice ==)
+   
      else if(computerChoice === 'Stump'){
        resultMsg = ('Tied');
      }
@@ -128,5 +80,24 @@
     </button>
 
     <h2 class="footer">Make Your Choice</h2>
+
+    <script>
+      let computerChoice;
+      function generateComputerChoice() {
+        let randomNumber = Math.random() * 3;
+
+        let computerChoiceMsg;
+        let resultMsg;
+
+        if (randomNumber > 0 && randomNumber <= 1) {
+          computerChoice = "Bat";
+        } else if (randomNumber > 1 && randomNumber <= 2) {
+          computerChoice = "Ball";
+        } else {
+          computerChoice = "Stump";
+        }
+        computerChoiceMsg = `Computer choice is ${computerChoice}`;
+      }
+    </script>
   </body>
 </html>
