--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
     </button>
 
     <h2 class="footer">Make Your Choice</h2>
+   <div>
+    <input class='choice'id='user' type="text" placeholder="Your choice">
+    <input class='choice' id='opponent' type="text" placeholder="opponent choice">
+   </div>
+    
 
     <script>
       let computerChoice;
