--- a/index.html
+++ b/index.html
@@ -4,29 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cricket-Game</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="pr.css" />
   </head>
 
   <body>
     <h1 class="heading">Cricket Game</h1>
+    <h2 class="footer">Make Your Choice</h2>
     <button
       class="bat"
       onclick="generateComputerChoice();
-   
-   const UserChoiceMsg = ('You have chosen Bat');
+
+      document.querySelector('#user').value = 'Bat';
+      const UserChoiceMsg = ('You have chosen Bat');
+
   let resultMsg;
     if(computerChoice === 'Ball')
-     {resultMsg = 'User Won';}
+     {resultMsg = 'You Won';}
     else if(computerChoice === 'Stump'){
-      resultMsg = 'Computer won';
+      resultMsg = 'You Loss';
     }
     else if(computerChoice === 'Bat'){
       resultMsg = 'Tied';
     }
 
-    alert(`You have choosen Bat, computer choice is ${computerChoice}
-      Result ${resultMsg}`
-    );
+    document.querySelector('#result').value = resultMsg ;
+    document.querySelector('#opponent').value = computerChoice ;
     "
     >
       Bat
@@ -35,20 +37,20 @@
     <button
       class="ball"
       onclick="generateComputerChoice();
- 
+    document.querySelector('#user').value = 'Ball';
+
     if(computerChoice === 'Ball')
     {resultMsg = ('Tied')}
     //  else if(computerChoice ==)
     else if(computerChoice === 'Stump'){
-      resultMsg = ('User won');
+      resultMsg = ('You won');
     }
     else{
-      resultMsg = ('Computer Won');
+      resultMsg = ('You Loss');
     }
 
-    alert(`You have choosen Ball, computer choice is ${computerChoice}
-      Result ${resultMsg}`
-    );
+    document.querySelector('#result').value = resultMsg ;
+    document.querySelector('#opponent').value = computerChoice ;
     "
     >
       Ball
@@ -58,32 +60,37 @@
       class="stump"
       onclick="
    generateComputerChoice();
- 
+   document.querySelector('#user').value = 'Stump';
+
     resultMsg = null;
  
-     if(computerChoice === 'Ball') resultMsg = ('Computer Won');
+     if(computerChoice === 'Ball') resultMsg = ('You Loss');
    
      else if(computerChoice === 'Stump'){
        resultMsg = ('Tied');
      }
      if(computerChoice === 'Bat'){
-       resultMsg = ('User won');
+       resultMsg = ('You won');
      }
- 
-     alert(`You have choosen Stump, computer choice is ${computerChoice}
-       Result ${resultMsg}`
-     );
-     "
+    document.querySelector('#result').value = resultMsg ;
+    document.querySelector('#opponent').value = computerChoice ;
+
+    "
     >
       Stump
     </button>
 
-    <h2 class="footer">Make Your Choice</h2>
-   <div>
-    <input class='choice'id='user' type="text" placeholder="Your choice">
-    <input class='choice' id='opponent' type="text" placeholder="opponent choice">
-   </div>
-    
+    <h2 class="footer">Result</h2>
+    <div>
+      <input class="choice" id="user" type="text" placeholder="Your choice" readonly />
+      <input
+        class="choice"
+        id="opponent" readonly
+        type="text"
+        placeholder="opponent choice"
+      />
+    </div>
+    <input class="choice" id="result" type="text" placeholder="Result" readonly/>
 
     <script>
       let computerChoice;
